# PinterestStyleImageBrowser

./: .gitignore  AGENTS.md  README.md  images.db  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
context/: architecture.md  notes.md
context/enhancements/: audience.md  index.md  research_plan.md  synthesis.md
context/enhancements/_research/: _source_count.md  currents.md
context/enhancements/recommendations/: 01-encoder-and-index-traits.md  02-hnsw-index-behind-trait.md  03-clip-encoder-upgrade-audit.md  (+8 more)
context/notes/: clip-preprocessing-decisions.md  conventions.md  dead-code-inventory.md  encoder-additions-considered.md  fusion-architecture.md  local-first-philosophy.md  mutex-poisoning.md  path-and-state-coupling.md  preprocessing-spatial-coverage.md  random-shuffle-as-feature.md
context/plans/: 2026-04-26-autonomous-session-report.md  perf-diagnostics.md  perf-optimisation-plan.md  performance-analysis.md  pipeline-parallelism-and-stats-ui.md  profiling-diagnostics-expansion.md
context/references/: m2-perf-options-2026-04.md
context/systems/: clip-image-encoder.md  clip-text-encoder.md  cosine-similarity.md  database.md  dinov2-encoder.md  filesystem-scanner.md  frontend-state.md  indexing.md  masonry-layout.md  model-download.md  multi-encoder-fusion.md  multi-folder-roots.md  paths-and-state.md  profiling.md  search-routing.md  siglip2-encoder.md  tag-system.md  tauri-commands.md  thumbnail-pipeline.md  watcher.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: README.md  download_lol_splashes.py
src/: App.css  App.tsx  main.tsx  types.d.ts  utils.ts
src-tauri/: .gitignore  Cargo.toml  images.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  filesystem.rs  image_struct.rs  indexing.rs  lib.rs  main.rs  model_download.rs  paths.rs  perf.rs  perf_report.rs  root_struct.rs  settings.rs  tag_struct.rs  watcher.rs
src-tauri/src/commands/: encoders.rs  error.rs  images.rs  mod.rs  notes.rs  profiling.rs  roots.rs  semantic.rs  semantic_fused.rs  similarity.rs  tags.rs
src-tauri/src/db/: embeddings.rs  images_query.rs  mod.rs  notes_orphans.rs  roots.rs  schema_migrations.rs  tags.rs  test_helpers.rs  thumbnails.rs
src-tauri/src/similarity_and_semantic_search/: cosine_similarity.rs  encoder.rs  encoder_dinov2.rs  encoder_siglip2.rs  encoder_text.rs  encoders.rs  mod.rs  ort_session.rs  preprocess.rs
src-tauri/src/similarity_and_semantic_search/cosine/: cache.rs  diagnostics.rs  index.rs  math.rs  mod.rs  rrf.rs
src-tauri/src/similarity_and_semantic_search/encoder_text/: encoder.rs  mod.rs  pooling.rs  tokenizer.rs
src-tauri/src/thumbnail/: generator.rs  mod.rs
src-tauri/tests/: audit_db_read_lock_routing_diagnostic.rs  audit_fusion_no_text_capable_encoders_diagnostic.rs  audit_indexing_parallel_encoder_diagnostic.rs  cosine_cache_invalidation_diagnostic.rs  cosine_topk_partial_sort_diagnostic.rs  indexing_pipeline.rs  similarity_integration_test.rs
src/components/: FullscreenImage.tsx  IndexingStatusPill.test.tsx  IndexingStatusPill.tsx  Masonry.tsx  MasonryAnchor.tsx  MasonryItem.tsx  MasonryItemSelected.tsx  MasonrySelectedFrame.tsx  MasonrySelectedItem.tsx  PerfOverlay.tsx  PinterestModal.tsx  SearchBar.tsx  SettingsDrawer.tsx  TagDropdown.tsx  masonryPacking.test.ts  masonryPacking.ts
src/hooks/: useDebouncedValue.ts  useIndexingProgress.ts  useLocate.tsx  useMeasure.tsx  useUserPreferences.test.ts  useUserPreferences.ts
src/pages/: [...slug].tsx  index.tsx
src/queries/: queryClient.ts  useImages.ts  useRoots.ts  useSemanticSearch.ts  useSimilarImages.ts  useTags.ts
src/services/: apiError.ts  images.ts  notes.ts  perf.ts  roots.ts  services.test.ts  stats.ts  tags.ts
src/stores/: image-store.ts
src/test/: setup.ts
(+102 files in other folders)
