[package]
name = "image-browser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "image_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Cross-platform deps that don't change per OS.
[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
image = { version = "0.25.9", features = ["webp", "tiff", "bmp", "gif", "jpeg", "png"] }
ndarray = "0.17.1"
rand = "0.9.2"
dirs = "6"
ureq = "3.3.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rayon = "1.10"
bincode = "1.3"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = { version = "0.7", default-features = false }
bytemuck = "1.25.0"
tokenizers = "0.22.2"

# R6 perf: NEON-optimised image resize. Replaces image::imageops::resize
# in the thumbnail generator (was the dominant cost in the thumbnail
# pipeline at ~256 ms/image; published ARM64 numbers show 7-13× speedup
# over the image crate at the same Lanczos3 quality). The `image` feature
# enables IntoImageView for image::DynamicImage so the adapter is one
# call. Version 6.x is the current release as of 2026-01.
fast_image_resize = { version = "6", features = ["image"] }

# R7 perf: explicit jpeg-decoder dependency (image crate already pulls
# it transitively, but exposing it directly lets us call Decoder::scale()
# for native scaled IDCT before the resize step. For 6000×3376 → 400×400
# thumbnails this saves ~95% of the IDCT work.
jpeg-decoder = "0.3"

# Phase 7 diagnostics: 1 Hz process RSS / CPU sampling under --profile.
# `sysinfo` is the cross-platform crate that abstracts over
# /proc on Linux, mach on macOS, PSAPI on Windows.
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

# Platform-gated ONNX Runtime so each OS pulls in only the execution
# providers it can actually use:
#
# macOS  -> CoreML EP. CoreML auto-routes ops to the Apple Neural
#           Engine, the integrated GPU, or the CPU depending on what
#           each op supports. Real-world speedup on M-series for CLIP
#           inference is in the 5-10x range.
#
# others -> CUDA EP for Nvidia GPUs on Windows/Linux. Falls back to
#           CPU when CUDA isn't installed at runtime.
#
# Both feature sets include `download-binaries` so the prebuilt
# Microsoft ONNX Runtime binary lands in target/ at build time;
# users don't need to install anything.
[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["coreml", "download-binaries"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["cuda", "download-binaries"] }

[dev-dependencies]
tempfile = "3.27.0"

# Apple Accelerate framework is the BLAS backend for ndarray on macOS.
# Routes a.dot(b) and friends through vecLib (NEON SIMD on Apple
# Silicon). Marginal vs CoreML for raw inference but free; cosine
# math benefits across the board.
[target.'cfg(target_os = "macos")'.dependencies.accelerate-src]
version = "0.3"

[target.'cfg(target_os = "macos")'.dependencies.blas-src]
version = "0.10"
features = ["accelerate"]
